Fix size modal on firefox

--- a/src/components/helper/Modal/Modal.scss
+++ b/src/components/helper/Modal/Modal.scss
@@ -20,6 +20,8 @@
         box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2), 0 7px 20px 0 rgba(0,0,0,0.17);
         transition: transform .8s;
         z-index: 3;
+        max-width: 320px;
+        margin: 1rem;
     }
 
     &-body {
@@ -27,7 +29,7 @@
     }
 
     &-qr {
-        // width: 50vmin;
+        width: 100%;
     }
 
     &-footer {
@@ -35,7 +37,7 @@
         display: flex;
         justify-content: stretch;
         width: 100%;
-        padding: 1em;
+        padding: 1rem;
     }
 
     &-button {
@@ -44,9 +46,9 @@
         color: $blue;
         cursor: pointer;
         font-weight: bold;
-        font-size: 1.6em;
+        font-size: 1.3em;
         outline: none;
-        padding: 20px;
+        padding: 1rem;
         flex: 1 1 auto;
         border-radius: 5px;
 
